# docscout

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/docscout/: __init__.py  cache.py  categories.py  cli.py  display.py  logging.py  models.py  parsing.py  scanner.py
tests/: test_cache.py  test_categories.py  test_cli.py  test_logging.py  test_models.py  test_parsing.py  test_scanner.py
