[project]
name = "docscout"
version = "0.1.0"
description = "EDA for single documents and document databases"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.scripts]
docscout = "docscout.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docscout"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
