[project]
name = "docscout"
version = "0.1.0"
description = "EDA for single documents and document databases"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [{name = "Felix Peters"}]
keywords = ["pdf", "docx", "pptx", "document-analysis", "eda", "cli", "docling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: General",
    "Typing :: Typed",
]
dependencies = [
    "docling>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/felixpeters/docscout"
Repository = "https://github.com/felixpeters/docscout"
Issues = "https://github.com/felixpeters/docscout/issues"
Changelog = "https://github.com/felixpeters/docscout/blob/main/CHANGELOG.md"

[project.scripts]
docscout = "docscout.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docscout"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["docscout"]

[tool.coverage.report]
fail_under = 65
show_missing = true
